:wrench: letters inside square! :bug: on text-wrap img

--- a/aboutme/aboutme.css
+++ b/aboutme/aboutme.css
@@ -62,6 +62,8 @@ section{
     object-fit: cover;
     pointer-events: none;
     overflow: hidden;
+    min-width: 246px;
+    min-height: 341px;
 }
 
 section img{
@@ -78,40 +80,43 @@ section img#behind{
     margin-top: 100px;
 }
 
-section img#bessa{
-    position: fixed;
+img#bessa{
+    min-height: 10%;
+    min-width: 10%;
     width: 250px;
+    margin-top: 2.5%;
     height: 250px;
-    top: 20%; 
-    left: 75%;
+    margin-left: 80%;
     pointer-events: all;
     z-index:6;
+    opacity: 100%;
+    float: left;
 }
 
-section .square{
+.square{
     position: fixed;
     border-radius: 50px;
     top: 17%;
-    width: 80%;
-    height: 60%;
-    background-color: azure;
-    opacity: 40%;
     z-index: 5;
+    min-height: 60%;
+    min-width: 75%;
+    width: 80%;
 }
 
-section p{
-    position: fixed;
-    top: 20%;
-    left: 13.5%;
+.square p{
+    overflow:hidden;
+    max-height: 50%;
+    min-width: 75%;
+    max-width: 90%;
+    margin-top: 2.5%;
+    margin-left: 5%;
     font-size: 2em;
     color: #258ce4;
     text-align: justify;
     text-shadow: black;
-    text-overflow: ellipsis;
     direction: ltr;
-    overflow: hidden;
-    white-space: nowrap;
-    z-index:10000;
+    white-space: break-word;
+    z-index: 7;
 }
 
 section img#sun{
@@ -139,3 +144,7 @@ section img#sun{
     z-index: 5;
 }
 
+#resize{
+    min-width:100%;
+    min-height: 100%;
+}
